# durak

./: .git-commit-message.txt  .pre-commit-config.yaml  BEST_PRACTICES.md  BLOCKERS_FIXED.md  CHANGES_SUMMARY.md  Cargo.toml  FINAL_SUMMARY.md  README.md  VALIDATION_REPORT.md  build.rs  pyproject.toml  pyrightconfig.json
benchmarks/: benchmark_rust_vs_python.py  lemmatization_baseline.json
docs/: BEST_PRACTICES.md  CLI.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
examples/: advanced_pipeline.py  emoji_sentiment_analysis.py  lemmatizer_metrics.py  lemmatizer_metrics_demo.py  ner_offset_mapping.py
memory/: durak-learnings.md  pr-91-normalizer-config-fix.md
scripts/: evaluate_lemmatizer.py  generate_resource_metadata.py
src/: core.rs  lib.rs  morphotactics.rs  vowel_harmony.rs
test_data/: 01_basic_proper_nouns.txt  02_detached_suffixes.txt  03_social_media.txt  04_turkish_i_handling.txt  05_morphological_variants.txt  06_informal_colloquial.txt  07_mixed_language.txt  08_html_markup.txt  09_repeated_chars.txt  10_formal_news.txt  11_punctuation_variants.txt  12_numbers_and_dates.txt  ANALYTICS_SUMMARY.md  COMPARATIVE_ANALYSIS.md  EDGE_CASE_ANALYSIS.md  analytics_report.json  benchmark_results.json  run_analytics.py  run_comprehensive_benchmark.py
tests/: cli_tests.rs  test_cleaning.py  test_cli.py  test_edge_cases.py  test_error_handling.py  test_lemmatizer.py  test_lemmatizer_metrics.py  test_normalizer.py  test_normalizer_integration.py  test_ottoman.py  test_processor.py  test_resource_versioning.py  test_syllabification.py  test_tokenize_normalized.py  (+2 more)
(+35 files in other folders)
