[package]
name = "_durak_core"
version = "0.4.0"
edition = "2021"

[lib]
name = "_durak_core"
crate-type = ["cdylib"]

[[bin]]
name = "durak"
path = "src/bin/durak.rs"

[dependencies]
# PyO3 only for Python bindings (lib), not needed for CLI binary
pyo3 = { version = "0.23.3", features = ["extension-module"], optional = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
atty = "0.2"

[features]
default = ["pyo3"]
python-bindings = ["pyo3"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
